@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils flag-o-matic multilib toolchain-funcs
+inherit eutils flag-o-matic multilib toolchain-funcs java-pkg-2
 
 DESCRIPTION="NativeBigInteger libs for Freenet taken from i2p"
 HOMEPAGE="http://www.i2p.net"
@@ -14,7 +14,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND="dev-libs/gmp
-	virtual/jdk
+	>=virtual/jdk-1.4
 	!net-p2p/nativebiginteger"
 RDEPEND="dev-libs/gmp"
 
@@ -25,28 +25,8 @@ src_compile() {
 	tc-export CC
 	cp "${FILESDIR}"/Makefile .
 
-	#workaround, if current system-vm is a jre
-	if has_version =dev-java/sun-jdk-1.6*; then
-		einfo "Using sun-jdk-1.6"
-		GENTOO_VM="sun-jdk-1.6" make libjbigi || die
-	elif has_version =dev-java/sun-jdk-1.5*; then
-		einfo "Using sun-jdk-1.5"
-		GENTOO_VM="sun-jdk-1.5" make libjbigi || die
-	else
-		ewarn "Using system vm, make sure it is a JDK!!!"
-		make libjbigi || die
-	fi
-	use amd64 || filter-flags -fPIC
-	if has_version =dev-java/sun-jdk-1.6*; then
-		einfo "Using sun-jdk-1.6"
-		GENTOO_VM="sun-jdk-1.6" make libjcpuid || die
-	elif has_version =dev-java/sun-jdk-1.5*; then
-		einfo "Using sun-jdk-1.5"
-		GENTOO_VM="sun-jdk-1.5" make libjcpuid || die
-	else
-		ewarn "Using system vm, make sure it is a JDK!!!"
-		make libjcpuid || die
-	fi
+	make libjbigi || die
+	make libjcpuid || die
 }
 
 src_install() {
