@@ -4,6 +4,10 @@
 
   21 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   nativebiginteger-0.6.1.31.ebuild:
+  Use eclass instead of workaround
+
+  21 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  nativebiginteger-0.6.1.31.ebuild:
   Add workaround for system-vm=jre
 
   20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
